<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_about_black_24dp"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_black_24dp"
        android:title="@string/title_location" />


    <item
        android:id="@+id/navigation_sponsors"
        android:icon="@drawable/ic_sponsor_black_24dp"
        android:title="@string/title_sponsor" />

    <item
        android:id="@+id/navigation_bios"
        android:icon="@drawable/ic_bios_black_24dp"
        android:title="@string/title_bios" />

</menu>
