<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="0.7dp"
        app:cardMaxElevation="1dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_event_title"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:fontFamily="@font/gotham_book"
                android:textAllCaps="true"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_event_subtitle"
                android:textSize="14sp"
                android:fontFamily="@font/gotham_light"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_event_invite"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:textSize="18sp"
                android:fontFamily="@font/gotham_book"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_event_date"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="4dp"
                android:fontFamily="@font/gotham_bold"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:linksClickable="true"
                android:text="@string/about_wict_text"
                android:textSize="18sp"
                android:fontFamily="@font/gotham_book"
                />

            <Button
                android:id="@+id/show_thankyou_note"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:onClick="showThanks"
                android:textAllCaps="false"
                android:padding="8dp"
                android:text="Special thanks to.."
                android:textColor="@color/solid_white"
                android:textSize="16sp"
                android:fontFamily="@font/gotham_medium"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>